Fix default image for posts